conf: Docker Compose 및 Airflow 환경 변수 설정 개선
프로젝트의 컨테이너 환경설정을 재구성하고, Airflow와 관련된 환경 변수 및 볼륨 마운트 경로를paths.env 파일 기준으로 개선합니다.

* **.paths/paths.env:**
    * [cite_start]MLOps 프로젝트의 모든 디렉토리 경로를 환경 변수로 명확하게 정의했습니다[cite: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20].
    * [cite_start]`DAGS_DIR`, `DATA_DIR`, `LOGS_DIR`와 같은 주요 경로를 포함하여 `data`, `logs`, `models`, `scripts`, `services` 등 세부 경로까지 체계적으로 관리합니다[cite: 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20].
    * `docker-compose.yaml`에서 사용할 `AIRFLOW_UID`, `AIRFLOW_GID` 등의 환경 변수도 정의하여 컨테이너 환경의 일관성을 높입니다.

* **docker-compose.yaml:**
    * `docker-compose.yml` 파일을 `docker-compose.yaml`로 이름을 변경하고, 파일 내용을 전면 수정했습니다.
    * Airflow 관련 서비스(webserver, scheduler, worker)의 공통 설정을 `x-airflow-common`으로 묶어 재사용성을 높였습니다.
    * [cite_start]`.paths/paths.env` 파일에 정의된 환경 변수(예: `${DAGS_DIR}`, `${LOGS_AIRFLOW_DIR}`, `${PLUGINS_AIRFLOW_DIR}`)를 사용하여 볼륨 마운트 경로를 동적으로 설정하도록 변경했습니다[cite: 3, 12, 19].
    * PostgreSQL, Redis, Flower 서비스를 추가하여 Airflow 환경과 연동되는 전체 MLOps 인프라를 정의했습니다.
    * 각 컨테이너에 대한 health check 설정을 추가하여 서비스의 정상 작동 여부를 자동으로 감지할 수 있게 했습니다.

* **파일 삭제:**
    * `docker-compose.yml` 파일이 삭제되었습니다.

--- a/mlops-project/.paths/paths.env
+++ b/mlops-project/.paths/paths.env
@@ -22,10 +22,12 @@ export DATA_RAW_DIR=./data/raw                                                  
 export DATA_PROCESSED_DIR=./data/processed                                      # 전처리된 데이터
 export DATA_TEMP_DIR=./data/temp                                                # 임시 데이터
 export DATA_EXTERNAL_DIR=./data/external                                        # 외부/백업 데이터
+export DATA_AIRFLOW_DIR=./data/airflow
 
 #--- 로그 디렉토리 ---#
 export LOGS_POSTGRESQL_DIR=./logs/postgresql                                    # PostgreSQL DB 로그
 export LOGS_MLFLOW_DIR=./logs/mlflow                                            # MLflow 실험 로그
+export LOGS_AIRFLOW_DIR=./logs/airflow                                          # Airflow 로그
 export LOGS_FEAST_CORE_DIR=./logs/feast-core                                    # Feast Core 서비스 로그
 export LOGS_FEAST_WEB_DIR=./logs/feast-web                                      # Feast Web UI 로그
 export LOGS_JUPYTERLAB_DIR=./logs/jupyterlab                                    # JupyterLab 서버 로그
@@ -50,7 +52,10 @@ export SERVICES_FEATURE_ENGINEERING_DIR=./services/feature_engineering          
 export SERVICES_MODEL_TRAINING_DIR=./services/model_training                    # 모델 학습 서비스
 export SERVICES_MONITORING_DIR=./services/monitoring                            # 모니터링 서비스
 
-#--- 서비스별 Dockerfile 경로 (예시) ---#
+#--- 플러그인 디렉토리 ---#
+export PLUGINS_AIRFLOW_DIR=./plugins/airflow                                    # Airflow 플러그인 경로
+
+#--- 서비스별 Dockerfile 경로 ---#
 export DOCKER_API=./services/api/Dockerfile                                     # API 서비스 Dockerfile
 export DOCKER_WORKERS=./services/workers/Dockerfile                             # 워커 서비스 Dockerfile
 export DOCKER_FEATURE_ENGINEERING=./services/feature_engineering/Dockerfile     # 피처 엔지니어링 서비스 Dockerfile
