conf: Airflow Docker Compose 환경 설정 및 경로 변수 최적화
`docker-compose.yaml` 파일과 `.paths/paths.env` 파일을 수정하여 Airflow 기반 MLOps 파이프라인의 컨테이너 환경을 개선합니다.

* **.paths/paths.env:**
    * `DAGS_DIR`, `LOGS_AIRFLOW_DIR`, `PLUGINS_AIRFLOW_DIR` 등 Airflow 컨테이너에서 사용할 주요 볼륨 경로를 환경 변수로 명확하게 정의했습니다.
    * `docker-compose.yaml` 파일에서 참조하는 모든 경로를 `.paths/paths.env` 파일에 일원화하여 관리 효율성을 높였습니다.
    * `DATA_DIR`의 하위 경로인 `data/airflow` 관련 디렉토리들(`DATA_AIRFLOW_DIR`, `DATA_AIRFLOW_RAW_DIR`, `DATA_AIRFLOW_PROCESSED_DIR`, `DATA_AIRFLOW_TEMP_DIR`)을 추가하여 데이터 관리를 세분화했습니다.
    * `dags`, `data`, `docs`, `feature_repo`, `logs`, `models`, `notebooks`, `scripts`, `services` 등 프로젝트의 주요 디렉토리 경로가 정의되었습니다.

* **docker-compose.yaml:**
    * Airflow 컨테이너(webserver, scheduler, worker)의 공통 설정을 `x-airflow-common`으로 그룹화하여 중복을 줄였습니다.
    * 볼륨 마운트 경로를 `paths.env` 파일에 정의된 환경 변수(예: `${DAGS_DIR}`, `${LOGS_AIRFLOW_DIR}`)를 사용하여 동적으로 설정하도록 변경했습니다.
    * PostgreSQL과 Redis 서비스에 `service_healthy`를 조건으로 하는 `depends_on` 설정을 추가하여 컨테이너 간의 의존성을 명확히 했습니다.
    * PostgreSQL, Redis, webserver 컨테이너에 각각 `healthcheck`를 추가하여 서비스 상태를 자동으로 확인할 수 있게 했습니다.
    * Celery를 위한 `flower` 서비스를 추가하여 Airflow Worker의 상태를 모니터링할 수 있도록 환경을 확장했습니다.

--- a/mlops-project/.paths/paths.env
+++ b/mlops-project/.paths/paths.env
@@ -23,6 +23,9 @@ export DATA_PROCESSED_DIR=./data/processed                                      
 export DATA_TEMP_DIR=./data/temp                                                # 임시 데이터
 export DATA_EXTERNAL_DIR=./data/external                                        # 외부/백업 데이터
 export DATA_AIRFLOW_DIR=./data/airflow
+export DATA_AIRFLOW_RAW_DIR=./data/airflow/raw
+export DATA_AIRFLOW_PROCESSED_DIR=./data/airflow/processed
+export DATA_AIRFLOW_TEMP_DIR=./data/airflow/temp
 
 #--- 로그 디렉토리 ---#
 export LOGS_POSTGRESQL_DIR=./logs/postgresql                                    # PostgreSQL DB 로그
