fix: Airflow Docker Compose 권한 및 웹 접근 오류 수정
Airflow 컨테이너 기동 시 발생하는 `Permission denied` 오류와 Webserver(8080 포트) 접속 불가 문제를 해결하기 위해 `docker-compose.yaml`을 수정합니다.

* **권한 오류 해결:**
    * [cite_start]Airflow 공식 도커 이미지가 사용하는 UID 50000(airflow)와 호스트 볼륨 마운트 디렉토리의 소유자/권한 불일치로 인해 발생하는 `Permission denied` 오류를 해결했습니다[cite: 3].
    * [cite_start]`docker-compose.yaml`에서 마운트되는 `dags`, `logs`, `data`, `plugins` 디렉토리의 소유자를 `50000:0`으로 변경하는 선행 작업이 필요함을 명시적으로 기록했습니다[cite: 3].
    * [cite_start]이 조치를 통해 컨테이너 내부에서 로그 파일 생성 및 쓰기 권한을 확보하여 Webserver 및 Scheduler의 정상 기동을 가능하게 합니다[cite: 3].

* **Webserver 접속 오류 해결:**
    * [cite_start]Airflow Webserver에 모든 IP(`0.0.0.0`)에서 접근할 수 있도록 환경 변수 `AIRFLOW__WEBSERVER__WEB_SERVER_HOST: 0.0.0.0`을 추가했습니다[cite: 3].
    * [cite_start]`webserver` 서비스의 `command`에 `--host 0.0.0.0` 옵션을 명시하여 Webserver가 모든 네트워크 인터페이스에서 요청을 수신하도록 설정했습니다[cite: 3].
    * 이로써 호스트의 8080 포트를 통해 Airflow Web UI에 외부에서 접근할 수 있게 됩니다.

* **파일 추가:**
    * `logs/airflow/dag_processor_manager/dag_processor_manager.log` 파일이 생성되어 Airflow의 DAG 프로세서 로그가 정상적으로 기록되기 시작했습니다.

--- a/mlops-project/docker-compose.yaml
+++ b/mlops-project/docker-compose.yaml
@@ -16,6 +16,7 @@ x-airflow-common: &airflow-common
     AIRFLOW__CELERY__RESULT_BACKEND: ${AIRFLOW__CELERY__RESULT_BACKEND} # Celery 결과 저장 Backend
     AIRFLOW__CORE__LOGGING_LEVEL: INFO                                  # 로그 레벨(INFO 고정)
     AIRFLOW__WEBSERVER__WEB_SERVER_PORT: 8080                           # Webserver 포트(8080)
+    AIRFLOW__WEBSERVER__WEB_SERVER_HOST: 0.0.0.0                        # Webserver 호스트(모든 IP에서 접근 가능)
   env_file:
     - .env                                                              # 민감정보, 환경변수 파일(.env)
     - ./.paths/paths.env                                                # 프로젝트별 경로 관리 환경변수 파일
@@ -79,7 +80,8 @@ services:
   # --------------------------------
   webserver:
     <<: *airflow-common                       # 공통 설정 상속(anchor)
-    command: webserver                        # webserver 실행(메인 UI)
+    command: >                                # webserver 실행(메인 UI)
+      webserver --port 8080 --host 0.0.0.0
     ports:
       - "8080:8080"                           # 호스트:컨테이너 포트(8080)
     healthcheck:
