feat: Airflow Dockerfile 및 MLOps 파이프라인 DAG 추가
Airflow 컨테이너 환경을 위한 Dockerfile과 MLOps 파이프라인의 초기 DAG 코드를 추가하고, 관련 환경 설정을 개선합니다.

* **mlops-project/services/airflow/Dockerfile:**
    * Airflow 공식 이미지(`apache/airflow:2.8.2`)를 기반으로 새로운 Dockerfile을 추가했습니다.
    * `requirements.txt`에 정의된 모든 Python 라이브러리를 컨테이너 내부에 설치하여 Airflow DAG 실행 환경을 구축합니다.
    * `USER root`로 전환하여 패키지를 설치하고, 다시 `USER airflow`로 돌아와 보안을 유지합니다.

* **mlops-project/dags/mlops-pipeline_dag.py:**
    * Airflow를 사용한 MLOps 파이프라인의 기본 DAG를 정의했습니다.
    * `extract_data_task`(BashOperator), `preprocess_raw_data_task`(PythonOperator), `feature_engineering_task`(BashOperator) 등 데이터 수집, 전처리, 피처 엔지니어링 단계를 가상으로 구성했습니다.
    * `s3_ingest_sample_task`를 추가하여 S3 연동 및 서버1의 처리 결과를 가져오는 샘플 코드를 포함했습니다.
    * Task 간의 의존성(`extract_data_task >> preprocess_data_task >> ...`)을 명확히 정의했습니다.

* **mlops-project/requirements.txt:**
    * `pandas`, `numpy`, `scikit-learn` 등 데이터 처리 및 분석에 필요한 라이브러리 버전을 명시했습니다.
    * `psycopg2-binary`를 추가하여 PostgreSQL 연결을 위한 의존성을 확보했습니다.
    * `mlflow`, `boto3`, `feast` 등 MLOps 파이프라인의 핵심 도구들을 추가했습니다.
    * `fastapi`와 `uvicorn`을 추가하여 모델 서빙 환경을 준비합니다.

* **mlops-project/docker-compose.yaml:**
    * Airflow 컨테이너의 빌드 컨텍스트를 프로젝트 루트(`.`)로 설정하고 `Dockerfile` 경로를 명시하여 빌드 오류를 방지했습니다.
    * `AIRFLOW_UID`와 `AIRFLOW_GID`를 `1000`으로 변경하여 컨테이너와 호스트 간의 볼륨 권한 문제를 해결했습니다].
    * `DATA_RAW_DIR`와 `DATA_PROCESSED_DIR` 볼륨 경로를 `docker-compose.yaml`에서 직접 참조하도록 수정했습니다.

* **기타 변경 사항:**
    * `gitignore` 파일의 이름이 `.gitignore`로 변경되었습니다.
    * `mlops-pipeline_dag.py`의 컴파일된 파일(`__pycache__`) 및 Airflow 로그 파일이 새로 생성되었습니다."

--- a/mlops-project/.paths/paths.env
+++ b/mlops-project/.paths/paths.env
@@ -23,8 +23,6 @@ export DATA_PROCESSED_DIR=./data/processed                                      
 export DATA_TEMP_DIR=./data/temp                                                # 임시 데이터
 export DATA_EXTERNAL_DIR=./data/external                                        # 외부/백업 데이터
 export DATA_AIRFLOW_DIR=./data/airflow
-export DATA_AIRFLOW_RAW_DIR=./data/airflow/raw
-export DATA_AIRFLOW_PROCESSED_DIR=./data/airflow/processed
 export DATA_AIRFLOW_TEMP_DIR=./data/airflow/temp
 
 #--- 로그 디렉토리 ---#
@@ -60,6 +58,7 @@ export PLUGINS_AIRFLOW_DIR=./plugins/airflow                                    
 
 #--- 서비스별 Dockerfile 경로 ---#
 export DOCKER_API=./services/api/Dockerfile                                     # API 서비스 Dockerfile
+export DOCKER_AIRFLOW=./services/airflow/Dockerfile                             # Airflow 서비스 Dockerfile
 export DOCKER_WORKERS=./services/workers/Dockerfile                             # 워커 서비스 Dockerfile
 export DOCKER_FEATURE_ENGINEERING=./services/feature_engineering/Dockerfile     # 피처 엔지니어링 서비스 Dockerfile
 export DOCKER_MODEL_TRAINING=./services/model_training/Dockerfile               # 모델 학습 서비스 Dockerfile
