--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -2,13 +2,14 @@
 
 # scripts
 SCRIPTS_MONITORING=./scripts/monitoring
+SCRIPTS_MONITORING_INFRA=./scripts/monitoring/infra
+SCRIPTS_MONITORING_CLIENT=./scripts/monitoring/client
 
 # service
-SERVICE_MONITORING=./services/monitoring
-
-
-
+SERVICES_MONITORING=./services/monitoring
+SERVICES_MONITORING_INFRA=./services/monitoring/infra
+SERVICES_MONITORING_CLIENT=./services/monitoring/client
 
 # Service > Monitoring env
-PROMETHEUS_CONFIG_PATH=./prometheus/prometheus.yml
-GRAFANA_DATA_PATH=./grafana-data
+HOME_DIR=/home/ubuntu            # 서버 홈 디렉토리 경로 설정
+GRAFANA_DATA_DIR=grafana-data
