--- a/mlops-project/docker-compose.yaml
+++ b/mlops-project/docker-compose.yaml
@@ -123,7 +123,7 @@ services:
   # --------------------------------
   worker:
     <<: *airflow-common                       # 공통 설정 상속(anchor)
-    command: worker                           # 워커 프로세스(태스크 분산 실행)
+    command: celery worker                    # 워커 프로세스(태스크 분산 실행)
     restart: on-failure                       # 장애 시 재시작
 
   # --------------------------------
