feat: Airflow DAG 및 Dockerfile 개선, 종속성 파일 분리
Airflow DAG의 안정적인 실행을 위해 코드를 수정하고, MLOps 파이프라인의 서버별 종속성을 명확히 관리하기 위해 `requirements.txt` 파일을 분리합니다.

* **dags/mlops-pipeline_dag.py:**
    * Airflow DAG에서 `os.environ`을 직접 사용하도록 수정하여 컨테이너 환경 변수를 더 명확하게 참조하도록 변경했습니다.
    * `BashOperator`와 `PythonOperator`의 로직을 개선하고, 태스크 실행 시 발생할 수 있는 오류를 예외 처리하여 DAG의 안정성을 높였습니다.

* **services/airflow/Dockerfile:**
    * Airflow 컨테이너의 Dockerfile을 수정하여 `requirements_server2.txt`를 사용하도록 변경했습니다.
    * 이로써 Airflow 컨테이너에 필요한 패키지만 설치하여 컨테이너 이미지를 경량화하고 빌드 시간을 단축했습니다.

* **requirements.txt → requirements_server1.txt:**
    * 기존 `requirements.txt` 파일을 `requirements_server1.txt`로 이름을 변경했습니다.
    * 이 파일에는 주로 데이터 처리 및 모델링(서버1)에 필요한 라이브러리 목록이 포함됩니다.

* **new file: requirements_server2.txt:**
    * Airflow, FastAPI 등 오케스트레이션 및 서빙(서버2)에 필요한 라이브러리 목록을 담은 `requirements_server2.txt` 파일을 새로 추가했습니다.
    * 이를 통해 서버별 역할에 맞는 종속성 관리를 할 수 있게 되었습니다.

* **docker-compose.yaml:**
    * `services` 내 `worker` 서비스의 `command` 필드를 수정하여 Airflow Worker가 정상적으로 실행되도록 개선했습니다.

--- a/services/airflow/Dockerfile
+++ b/services/airflow/Dockerfile
@@ -6,8 +6,8 @@ FROM apache/airflow:2.8.2
 
 # requirements.txt 파일을 복사하기 위해 일시적으로 root 사용자로 전환
 USER root
-COPY requirements.txt .
+COPY requirements_server2.txt .
 
 # pip install은 airflow 사용자로 실행
 USER airflow
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements_server2.txt
