--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__LOGGING_LEVEL: INFO                                          # 로그 레벨(INFO 고정)
     AIRFLOW__WEBSERVER__WEB_SERVER_PORT: ${AIRFLOW__WEBSERVER__WEB_SERVER_PORT} # Webserver 포트(8080)
     AIRFLOW__WEBSERVER__WEB_SERVER_HOST: ${AIRFLOW__WEBSERVER__WEB_SERVER_HOST} # Webserver 호스트(모든 IP에서 접근 가능)
+    PYTHONPATH: ${SCRIPTS_DIR}
   env_file:
     - .env                                                                      # 민감정보, 환경변수 파일(.env)
     - ./.paths/paths.env                                                        # 프로젝트별 경로 관리 환경변수 파일
