--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -13,3 +13,4 @@ SERVICES_MONITORING_CLIENT=./services/monitoring/client
 # Service > Monitoring env
 HOME_DIR=/home/ubuntu            # 서버 홈 디렉토리 경로 설정
 GRAFANA_DATA_DIR=grafana-data
+LOKI_DATA_DIR=loki-data
