--- a/services/model_inference/dockerfile
+++ b/services/model_inference/dockerfile
@@ -8,8 +8,8 @@ RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements_server1.txt .
+RUN pip install --no-cache-dir -r requirements_server1.txt
 
 COPY . .
 
