--- a/requirements_server1.txt
+++ b/requirements_server1.txt
@@ -1,10 +1,10 @@
-alembic==1.15.1
+alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.9.0
 asttokens==3.0.0
 blinker==1.9.0
-boto3==1.40.0
-botocore==1.40.0
+boto3==1.39.17
+botocore==1.39.17
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.2
@@ -71,7 +71,7 @@ scipy==1.16.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==1.4.54
+SQLAlchemy>=2.0,<3.0
 sqlparse==0.5.3
 starlette==0.47.2
 svgwrite==1.4.3
