fix: Airflow 컨테이너 AWS 연동 의존성 충돌 해결 및 환경설정 개선
Airflow 컨테이너 기동 시 발생하는 AWS 관련 패키지 의존성 충돌 문제를 해결하고, 환경 설정을 개선합니다.

* **의존성 충돌 해결(`requirements_server2.txt`):**
    * `boto3`, `botocore`, `aiobotocore` 등 AWS 관련 패키지의 버전을 `apache-airflow-providers-amazon==8.12.0`의 요구사항에 맞춰 명확하게 고정했습니다.
    * `requirements_server2.txt` 파일에 Airflow 컨테이너에 필요한 최소한의 필수 패키지 목록만 남겨 의존성 관리를 단순화했습니다.

* **Dockerfile 수정(`services/airflow/Dockerfile`):**
    * `requirements_server2.txt` 파일에 명시된 패키지를 설치한 후, `pip check` 명령어를 추가하여 의존성 충돌을 사전에 탐지할 수 있도록 했습니다.
    * `pip install`은 `airflow` 사용자로 실행하도록 변경하여 보안을 강화했습니다.

* **Docker Compose 및 권한 설정(`docker-compose.yaml`):**
    * `docker-compose.yaml` 파일의 `services` 내 `worker` 서비스에 `AIRFLOW__CORE__SQL_ALCHEMY_CONN`와 `AIRFLOW__CELERY__RESULT_BACKEND` 환경 변수를 추가하여 DB 연결 문제를 해결했습니다.
    * Airflow 컨테이너의 사용자(user)를 `1000:0` 또는 `ubuntu:root`로 설정하여 볼륨 마운트 권한 문제를 해결할 수 있도록 했습니다.
    * `docker-compose.yaml`에 `build` 항목의 `context`와 `dockerfile` 경로를 명시하여 빌드 설정을 명확히 했습니다.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -90,6 +90,11 @@ services:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_REGION: ${AWS_REGION}
+    healthcheck:
+      test: ["CMD-SHELL", "echo", "healthcheck"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
     networks:
       - airflow_network
     depends_on:
