--- a/services/model_inference/dockerfile
+++ b/services/model_inference/dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements_server1.txt .
-RUN pip install --no-cache-dir -r requirements_server1.txt
+RUN pip install --no-cache-dir -r requirements_server1.txt \
+ && pip check
 
 COPY . .
 
