--- a/requirements_server2.txt
+++ b/requirements_server2.txt
@@ -2,6 +2,7 @@
 apache-airflow==2.8.2
 psycopg2-binary==2.9.9
 apache-airflow-providers-amazon==8.12.0
+mlflow
 
 # -- FastAPI 및 Uvicorn (API 서빙, 필요 시) --
 # fastapi==0.111.0
