refactor: Airflow DAG 스케줄 주기 및 코드 개선, 종속성 추가
Airflow DAG의 실행 주기를 변경하고, 가독성을 높이기 위해 코드에 주석을 추가했습니다. 또한, MLflow 및 디버깅 관련 라이브러리 종속성을 `requirements_server2.txt`에 추가했습니다.

* **dags/mlops-pipeline_dag.py:**
    * DAG의 스케줄 주기를 기존 1분에서 3분으로 수정하여 파이프라인 실행 간격을 조정했습니다.
    * 전체 코드에 한글 주석을 상세하게 추가하여 DAG의 각 태스크와 로직을 쉽게 이해할 수 있도록 가독성을 높였습니다.

* **requirements_server2.txt:**
    * `mlflow==2.17.2`를 추가하여 Airflow DAG 내에서 MLflow를 활용한 실험 추적 및 모델 관리가 가능하도록 했습니다.
    * `icecream==2.1.5`와 `tqdm==4.67.1`를 추가하여 디버깅 및 진행 상황 모니터링 편의성을 개선했습니다.

* **data/raw/popular_movies_raw.json 및 data/raw/watch_log.csv:**
    * Airflow 자동화 파이프라인 실행 결과로 생성된 영화 데이터 파일이 커밋 대상에 포함되었습니다.

--- a/requirements_server2.txt
+++ b/requirements_server2.txt
@@ -2,7 +2,9 @@
 apache-airflow==2.8.2
 psycopg2-binary==2.9.9
 apache-airflow-providers-amazon==8.12.0
-mlflow
+mlflow==2.17.2
+icecream==2.1.5
+tqdm==4.67.1
 
 # -- FastAPI 및 Uvicorn (API 서빙, 필요 시) --
 # fastapi==0.111.0
