chore: path.env 전체 경로 환경 변수 설정 파일 예외처리

--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,10 @@ nosetests.xml # Test results
 # Other folders
 projects/
 
+
+# 전체 디렉토리 경로 환경 변수 설정 .env 파일
+.paths/*
+
 # User Add
 # !./mlops-project/logs/*
 !./mlops-project/services/*
