--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ x-airflow-common: &airflow-common
     AIRFLOW__WEBSERVER__WEB_SERVER_HOST: ${AIRFLOW__WEBSERVER__WEB_SERVER_HOST} # Webserver 호스트(모든 IP에서 접근 가능)
     PYTHONPATH: /opt/airflow:/opt/airflow/scripts                               # Airflow 스크립트 경로 추가 
   env_file:
-    - .env                                                                      # 민감정보, 환경변수 파일(.env)
-    - ./.paths/paths.env                                                        # 프로젝트별 경로 관리 환경변수 파일
+    - ${ENV_PATH}                                                                      # 민감정보, 환경변수 파일(${ENV_PATH})
+    - ./.paths/paths${ENV_PATH}                                                        # 프로젝트별 경로 관리 환경변수 파일
   volumes:
     - ${DAGS_DIR}:/opt/airflow/dags                                             # DAG 파이썬 코드 저장 경로
     - ${LOGS_AIRFLOW_DIR}:/opt/airflow/logs                                     # Airflow 각종 로그 저장 경로
@@ -36,7 +36,7 @@ x-airflow-common: &airflow-common
     - ${DATA_AIRFLOW_TEMP_DIR}:/opt/airflow/data/temp                           # 임시 데이터 경로
     - ./scripts:/opt/airflow/scripts                                            # Airflow 스크립트 경로(파이썬 코드)
   networks:
-    - airflow_network             # Airflow 전용 도커 네트워크(브리지)
+    - mlops_network             # Airflow 전용 도커 네트워크(브리지)
   restart: on-failure             # 컨테이너 장애 시 재시작
   depends_on:                     # 의존 서비스 준비될 때까지 대기
     postgres:
@@ -52,21 +52,23 @@ services:
   # PostgreSQL(Airflow 내부 DB)
   # --------------------------------
   postgres:
-    image: postgres:13                        # PostgreSQL 공식 이미지(버전 13)
+    image: postgres:13                          # PostgreSQL 공식 이미지(버전 13)
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}         # DB 계정명
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # DB 비밀번호
-      POSTGRES_DB: ${POSTGRES_DB}             # DB 이름
+      POSTGRES_USER: ${POSTGRES_USER}           # DB 계정명
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}   # DB 비밀번호
+      POSTGRES_DB: ${POSTGRES_DB}               # DB 이름
+    ports:
+      - ${DB_PORT}:${DB_PORT}                   # 호스트:컨테이너 포트(5432)
     volumes:
-      - postgres_data:/var/lib/postgresql/data      # 데이터 파일을 로컬 볼륨에 영구 저장
+      - postgres_data:/var/lib/postgresql/data  # 데이터 파일을 로컬 볼륨에 영구 저장
     networks:
-      - airflow_network                       # 동일 네트워크(통신)
+      - mlops_network                        # 동일 네트워크(통신)
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"] # DB 준비상태 체크
-      interval: 5s                            # 체크 주기
-      timeout: 5s                             # 타임아웃
-      retries: 5                              # 최대 재시도
-    restart: on-failure                       # 장애 시 재시작
+      interval: 5s                              # 체크 주기
+      timeout: 5s                               # 타임아웃
+      retries: 5                                # 최대 재시도
+    restart: on-failure                         # 장애 시 재시작
 
   # --------------------------------
   # 모델 학습 및 추론 서비스
@@ -97,23 +99,53 @@ services:
       timeout: 10s
       retries: 3
     networks:
-      - airflow_network
+      - mlops_network
     depends_on:
       - postgres                                        # PostgreSQL 준비 완료 후 시작   
 
   # --------------------------------
+  # API 서비스
+  # --------------------------------
+  mlops-api:
+    build:
+      context: .
+      dockerfile: ${DOCKER_API}
+    image: jkim1209/mlops-api:1.0.2
+    container_name: mlops-api
+    ports:
+      - "8000:8000"
+    env_file:
+      - ${ENV_PATH}
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:8000/docs || exit 1"]  # /docs 엔드포인트 200 OK 확인
+      interval: 10s                                     # 헬스체크 주기(10초)
+      timeout: 10s                                      # 응답 대기(10초)
+      retries: 3                                        # 최대 3번 재시도
+      start_period: 20s                                 # 컨테이너 기동 후 최초 체크까지 대기(20초)
+    networks:
+      - mlops_network
+    depends_on:
+      - postgres                                        # PostgreSQL 준비 완료 후 시작
+  
+  # --------------------------------
   # Redis(Celery 브로커)
   # --------------------------------
   redis:
-    image: redis:6.2-alpine                   # Redis 공식 경량 이미지
+    image: redis:6.2-alpine                             # Redis 공식 경량 이미지
     networks:
-      - airflow_network                       # 동일 네트워크(통신)
+      - mlops_network                                # 동일 네트워크(통신)
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]      # Redis 상태 체크
-      interval: 5s                            # 체크 주기
-      timeout: 5s                             # 타임아웃
-      retries: 5                              # 최대 재시도
-    restart: on-failure                       # 장애 시 재시작
+      test: ["CMD", "redis-cli", "ping"]                # Redis 상태 체크
+      interval: 5s                                      # 체크 주기
+      timeout: 5s                                       # 타임아웃
+      retries: 5                                        # 최대 재시도
+    restart: on-failure                                 # 장애 시 재시작
     depends_on:
       - model_inference
 
@@ -188,7 +220,7 @@ services:
     ports:
       - "${FLOWER_PORT:-5555}:5555"           # 호스트:컨테이너 포트(5555 기본값)
     networks:
-      - airflow_network                       # 동일 네트워크(통신)
+      - mlops_network                       # 동일 네트워크(통신)
     depends_on:
       - redis                                 # Redis 준비 완료 후 시작
       - worker                                # 워커 준비 완료 후 시작
@@ -201,5 +233,5 @@ volumes:
   postgres_data:      # PostgreSQL 데이터 파일 영구 저장용 도커 볼륨
 
 networks:
-  airflow_network:    # Airflow, DB, Redis, Flower 등 모든 서비스가 연결되는 네트워크
+  mlops_network:    # Airflow, DB, Redis, Flower 등 모든 서비스가 연결되는 네트워크
     driver: bridge    # 브리지 네트워크(컨테이너 통신 전용)
