--- a/requirements_server2.txt
+++ b/requirements_server2.txt
@@ -5,6 +5,7 @@ apache-airflow-providers-amazon==8.12.0
 mlflow==2.17.2
 icecream==2.1.5
 tqdm==4.67.1
+fire
 
 # -- FastAPI 및 Uvicorn (API 서빙, 필요 시) --
 # fastapi==0.111.0
