--- a/services/monitoring/infra/prometheus/prometheus.yml
+++ b/services/monitoring/infra/prometheus/prometheus.yml
@@ -11,14 +11,7 @@ scrape_configs:                     # [필수] 스크랩 대상(Target) 목록
   - job_name: 'server1-metrics'
     static_configs:
       - targets: ['server1_ip:8000'] # 추후 실제 서버로 변경 예정
-# server2
-  - job_name: 'server2-node-exporter'
-    static_configs:
-      - targets: ['server2_ip:9100'] # 추후 실제 서버로 변경 예정
 
-  - job_name: 'server2-metrics'
-    static_configs:
-      - targets: ['server2_ip:8000'] # 추후 실제 서버로 변경 예정
 # server3
   - job_name: 'server3-node-exporter'
     static_configs:
@@ -27,3 +20,8 @@ scrape_configs:                     # [필수] 스크랩 대상(Target) 목록
   - job_name: 'server3-metrics'
     static_configs:
       - targets: ['monitoring-client:8000'] # 추후 실제 서버로 변경 예정
+
+# promtail metrics (로그 기반 메트릭)
+  - job_name: 'log-metrics'
+    static_configs:
+      - targets: ['promtail:9080']
