feat: 모델 추론 서비스 및 환경 변수 설정 추가
모델 추론 서비스를 Docker Compose 파일에 추가하고, 관련 환경 변수 및 를 업데이트합니다.

* **docker-compose.yml:**
    * 라는 이름으로 PostgreSQL 데이터베이스 서비스를 추가했습니다. 이 서비스는 모델 추론 서비스의 데이터베이스 역할을 담당합니다.
    * 라는 이름으로 모델 추론 서비스를 추가했습니다. 이 서비스는 을 사용하여 빌드되고, 데이터베이스 및 AWS S3와 같은 외부 자원에 연결하기 위한 환경 변수를 설정했습니다.
    *  네트워크를 정의하여 두 서비스가 서로 통신할 수 있도록 구성했습니다.

* **services/api/dockerfile:**
    *  디렉토리 내의 Dockerfile 경로를 수정하여 빌드 컨텍스트를 올바르게 지정하도록 했습니다.

* **.paths/paths.env:**
    * 프로젝트의 모든 경로를 관리하는 환경 변수 파일을 업데이트했습니다.

* **.gitignore:**
    * Git에서 추적하지 않을 파일 및 디렉토리 목록에 와  폴더를 추가했습니다.

--- a/services/api/dockerfile
+++ b/services/api/dockerfile
@@ -10,10 +10,10 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # requirements 설치
-COPY ../../requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ../../ ./
+COPY . .
 
 # FastAPI 실행
 CMD ["uvicorn", "scripts.webapp:app", "--host", "0.0.0.0", "--port", "8000"]
