--- a/requirements_server2.txt
+++ b/requirements_server2.txt
@@ -2,14 +2,10 @@
 apache-airflow==2.8.2
 psycopg2-binary==2.9.9
 apache-airflow-providers-amazon==8.12.0
-mlflow==2.17.2
-icecream==2.1.5
-tqdm==4.67.1
-fire
 
 # -- FastAPI 및 Uvicorn (API 서빙, 필요 시) --
-# fastapi==0.111.0
-# uvicorn==0.29.0
+fastapi
+uvicorn
 
 # -- 기타 (실제 DAG에서 필요할 경우만 추가, PRD에는 직접적 요구 없음) --
 # nginx는 시스템 패키지(apt 설치)라서 python 패키지에 불필요
