--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
   # --------------------------------
   # PostgreSQL(Airflow 내부 DB)
   # --------------------------------
-  postgres:
+  mlops-extract-data:
     image: postgres:13                          # PostgreSQL 공식 이미지(버전 13)
+    container_name: extract-data                # 컨테이너 이름
     environment:
       POSTGRES_USER: ${POSTGRES_USER}           # DB 계정명
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}   # DB 비밀번호
@@ -27,12 +28,12 @@ services:
   # --------------------------------
   # 모델 학습 및 추론 서비스
   # --------------------------------
-  model_inference:
+  mlops-model-inference:
     build:
       context: .                                          # 빌드 컨텍스트를 상위 디렉토리로 설정
       dockerfile: ${DOCKER_MODEL_INFERENCE}               # Dockerfile 경로
     image: jkim1209/mlops-project:1.2.0                   # 이미지 이름 및 태그
-    container_name: model_inference                       # 컨테이너 이름
+    container_name: model-inference                       # 컨테이너 이름
     environment:
       DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
@@ -55,7 +56,7 @@ services:
     networks:
       - mlops_network
     depends_on:
-      - postgres                                        # PostgreSQL 준비 완료 후 시작   
+      - mlops-extract-data  # 데이터 수집/전처리 후 준비 완료 후 시작   
 
   # --------------------------------
   # API 서비스
@@ -85,7 +86,7 @@ services:
     networks:
       - mlops_network
     depends_on:
-      - postgres                                        # PostgreSQL 준비 완료 후 시작
+      - mlops-extract-data  # 데이터 수집/전처리 후 준비 완료 후 시작 
 
 # ==============================
 # Docker 볼륨 및 네트워크 정의
