chore: 경로 오타 수정

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,27 +38,55 @@ x-airflow-common: &airflow-common
   networks:
     - mlops_network             # Airflow 전용 도커 네트워크(브리지)
   restart: on-failure             # 컨테이너 장애 시 재시작
+  depends_on:                     # 의존 서비스 준비될 때까지 대기
+    postgres:
+      condition: service_healthy  # postgres 서비스 health check 통과 후 시작
 
 # ==============================
 # 서비스(컨테이너) 정의
 # ==============================
 services:
   # --------------------------------
+  # PostgreSQL(Airflow 내부 DB)
+  # --------------------------------
+  postgres:
+    image: postgres:13                          # PostgreSQL 공식 이미지(버전 13)
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}           # DB 계정명
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}   # DB 비밀번호
+      POSTGRES_DB: ${POSTGRES_DB}               # DB 이름
+    ports:
+      - ${DB_PORT}:${DB_PORT}                   # 호스트:컨테이너 포트(5432)
+    volumes:
+      - postgres_data:/var/lib/postgresql/data  # 데이터 파일을 로컬 볼륨에 영구 저장
+    networks:
+      - mlops_network                           # 동일 네트워크(통신)
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"] # DB 준비상태 체크
+      interval: 5s                              # 체크 주기
+      timeout: 5s                               # 타임아웃
+      retries: 5                                # 최대 재시도
+    restart: on-failure                         # 장애 시 재시작
+
+  # --------------------------------
   # Airflow Webserver(관리 UI)
   # --------------------------------
   webserver:
-    <<: *airflow-common                       # 공통 설정 상속(anchor)
-    command: >                                # webserver 실행(메인 UI)
+    <<: *airflow-common                         # 공통 설정 상속(anchor)
+    command: >                                  # webserver 실행(메인 UI)
       webserver --port 8080 --host 0.0.0.0
     user: "1000:0"
     ports:
-      - "8080:8080"                           # 호스트:컨테이너 포트(8080)
+      - "8080:8080"                             # 호스트:컨테이너 포트(8080)
     healthcheck:
       test: ["CMD-SHELL", "curl --fail http://localhost:8080/health || exit 1"] # Webserver 헬스체크
-      interval: 10s                           # 체크 주기
-      timeout: 10s                            # 타임아웃
-      retries: 5                              # 최대 재시도
-    restart: on-failure                       # 장애 시 재시작
+      interval: 10s                             # 체크 주기
+      timeout: 10s                              # 타임아웃
+      retries: 5                                # 최대 재시도
+    restart: on-failure                         # 장애 시 재시작
+    depends_on:
+      postgres:
+        condition: service_healthy              # postgres 서비스 health check 통과 후 시작
 
   # --------------------------------
   # Airflow DB/권한 초기화(1회)
@@ -67,6 +95,9 @@ services:
     <<: *airflow-common
     command: bash -c "airflow db init && airflow users create --username admin --password admin --firstname admin --lastname admin --role Admin --email admin@example.com"
     user: "1000:0"
+    depends_on:
+      postgres:
+        condition: service_healthy              # postgres 서비스 health check 통과 후 시작
 
   # --------------------------------
   # Airflow Scheduler(DAG 실행 트리거)
@@ -78,6 +109,9 @@ services:
     healthcheck:
        test: ["CMD-SHELL", "airflow jobs check --job-type SchedulerJob --hostname airflow-scheduler"]
     restart: on-failure                       # 장애 시 재시작
+    depends_on:
+      postgres:
+        condition: service_healthy              # postgres 서비스 health check 통과 후 시작
 
   # --------------------------------
   # Airflow Worker(Celery)
@@ -87,6 +121,9 @@ services:
     command: celery worker                    # 워커 프로세스(태스크 분산 실행)
     user: "1000:0"
     restart: on-failure                       # 장애 시 재시작
+    depends_on:
+      postgres:
+        condition: service_healthy              # postgres 서비스 health check 통과 후 시작
 
   # --------------------------------
   # Flower(Celery 작업 모니터링 UI)
@@ -95,12 +132,15 @@ services:
     image: mher/flower:1.2.0                  # Flower 공식 이미지(버전 1.2.0)
     user: "1000:0"
     environment:
-      CELERY_BROKER_URL: ${AIRFLOW__CELERY__BROKER_URL}         # 브로커 주소
+      CELERY_BROKER_URL: ${AIRFLOW__CELERY__BROKER_URL}    # 브로커 주소
       CELERY_RESULT_BACKEND: ${AIRFLOW__CELERY__RESULT_BACKEND} # 결과 저장소 주소
     ports:
       - "${FLOWER_PORT:-5555}:5555"           # 호스트:컨테이너 포트(5555 기본값)
     networks:
-      - mlops_network                         # 동일 네트워크(통신)
+      - mlops_network                       # 동일 네트워크(통신)
+    depends_on:
+      postgres:
+        condition: service_healthy              # postgres 서비스 health check 통과 후 시작
     restart: on-failure                       # 장애 시 재시작
 
 # ==============================
@@ -110,5 +150,5 @@ volumes:
   postgres_data:      # PostgreSQL 데이터 파일 영구 저장용 도커 볼륨
 
 networks:
-  mlops_network:      # Airflow, DB, Redis, Flower 등 모든 서비스가 연결되는 네트워크
+  mlops_network:    # Airflow, DB, Redis, Flower 등 모든 서비스가 연결되는 네트워크
     driver: bridge    # 브리지 네트워크(컨테이너 통신 전용)
